--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0 auto;
     padding: 0;
-    aligh-items: center;
+    align-items: center;
     text-align: center;
     
     background: radial-gradient(
