--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@ body {
 
 .game-page {
     background-color: #27592D !important;
+    background-image: none !important;
     min-height: 100vh;
 }
 
