--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,13 @@ body {
 }
 
 .game-page {
+    background: radial-gradient(
+        circle,
+        #35A542 0%,
+        #35A542 30%,
+        #244929 100%
+    );
+    
     background: #27592D !important;
     background-image: none !important;
     min-height: 100vh;
