--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,14 +28,24 @@ body {
     min-height: 100vh;
 }
 
-button {
-    width: 8em;
-    border: 2px solid green;
-    background: #ffe;
-    border-radius: 5px;
+.buttons {
+    display: flex;
+    gap: 20px;
+    justify-content: space-around;
+    padding: 20px;
 }
 
-a {
+.button {
+    padding: 15px;
+    border: 1px solid;
+    background-color: #274AB3;
+    color: black;
+    border-radius: 5px;
+    flex: 1;
+    text-decoration: none;
+}
+
+.buttons p a {
     display: block;
     width: 100%;
     line-height: 2em;
@@ -44,7 +54,7 @@ a {
     border-radius: 5px;
 }
 
-a:hover {
+.buttons p a:hover {
     color: red;
-    background: #eff;
+    background-color: #182E6F;
 }
