--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,7 +38,7 @@ body {
 .button {
     padding: 15px;
     border: 1px solid;
-    background-color: #274AB3;
+    background-color: #DE8C09;
     color: black;
     border-radius: 5px;
     flex: 1;
