--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,31 +30,26 @@ body {
 
 .buttons {
     display: flex;
-    gap: 20px;
+    gap: 1.5em;
     justify-content: space-around;
-    padding: 20px;
-}
-
-.button {
-    padding: 15px;
-    border: 1px solid;
-    background-color: #DE8C09;
-    color: black;
-    border-radius: 5px;
-    flex: 1;
-    text-decoration: none;
+    padding: 1.5em;
 }
 
 .buttons p a {
     display: block;
     width: 100%;
     line-height: 2em;
+    padding: 1em;
+    border: 1px solid;
+    border-radius: 0.5em;
+    background-color: #DE8C09;
+    color: black;
     text-align: center;
     text-decoration: none;
-    border-radius: 5px;
 }
 
 .buttons p a:hover {
     color: red;
     background-color: #182E6F;
+    text-decoration: underline;
 }
