--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,17 @@ body {
     margin: 0;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.header-left {
+    font-weight: bold;
+}
+
 .game-page {
     background: radial-gradient(
         circle,
