--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,28 @@ header {
     font-weight: bold;
 }
 
+header ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+header ul li {
+    vertical-align: middle;
+    align-items: center;
+}
+
+header ul li a {
+    color: black;
+    text-decoration: none;
+}
+
+header ul li a:hover {
+    text-decoration: underline;
+}
+
 .game-page {
     background: radial-gradient(
         circle,
