--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,6 +89,7 @@ header ul li a:hover {
 .side-images {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1em;
 }
 
@@ -101,6 +102,7 @@ header ul li a:hover {
 .games {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 0.5em;
     width: 50%;
 }
