--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,7 +102,8 @@ header ul li a:hover {
 .games {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    vertical-align: text-top;
     gap: 0.5em;
     width: 50%;
 }
