--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,6 +103,7 @@ header ul li a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     gap: 0.5em;
     width: 50%;
 }
