--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,14 +79,23 @@ header ul li a:hover {
 }
 
 .rules {
-    align-items: left;
+    display: block;
+    border: 1px solid;
+    border-radius: 0.5em;
+    margin: 1em;
+    text-align: left;
+}
+
+ul.list {
+  display: inline-block;
+  align-items: left;
 }
 
 .create {
     display: block;
     border: 1px solid;
     border-radius: 0.5em;
-    padding: 1em;
+    margin: 1em;
 }
 
 .games {
