--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,11 +79,15 @@ header ul li a:hover {
 }
 
 .rules {
-    display: block;
+    display: flex;
     border: 1px solid;
     border-radius: 0.5em;
+    padding: 1em 1em;
+    justify-content: space-between;
+    gap: 1.5em;
     margin: 1em;
     text-align: left;
+    align-items: top;
 }
 
 ul.list {
