--- a/styles/styles.css
+++ b/styles/styles.css
@@ -85,7 +85,8 @@ header ul li a:hover {
     border-radius: 0.5em;
     padding: 1em 1em;
     justify-content: space-between;
-    gap: 1em;
+    gap: 0.5em;
+    margin: 1em;
     text-align: left;
     align-items: top;
 }
