--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,6 +54,11 @@ header ul li a:hover {
     text-decoration: underline;
 }
 
+img {
+    width: 50%;
+    transform: rotate(45deg);
+}
+
 .page {
     display: flex;
     flex-direction: row;
