--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,6 +81,7 @@ img {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    padding: 1em;
 }
 
 .buttons p a {
