--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,7 +81,7 @@ img {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding: 1em;
+    width: 100%;
 }
 
 .buttons p a {
