--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,7 +116,7 @@ h1 {
     background-color: #182E6F;
 }
 
-.rules {
+.rules-middle {
     display: inline-block;
     border: 1px solid;
     border-radius: 0.5em;
