--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,6 +117,7 @@ h1 {
 }
 
 .rules-middle {
+    width: 30%;
     display: inline-block;
     border: 1px solid;
     border-radius: 0.5em;
@@ -124,7 +125,7 @@ h1 {
     justify-content: space-between;
     gap: 0.5em;
     margin: 1em;
-    text-align: left;
+    text-align: center;
     align-items: top;
 }
 
