--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,7 +132,7 @@ THESE UNLESS YOU WANT TO CHANGE THE APPEARANCE OF ALL PAGES */
     border-radius: 0.5em;
     padding: 0.5em;
     margin: 0.5em;
-    text-align: center;
+    text-align: left;
     align-items: top;
 }
 
