--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,8 @@ body {
     font-family: 'Monaco', monospace;
     margin: 0 auto;
     padding: 0;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
     
@@ -27,6 +29,8 @@ header {
     justify-content: space-between;
     align-items: center;
     text-align: center;
+    width: 100%;
+    max-width: 1200px;
 }
 
 .header-left {
@@ -64,6 +68,7 @@ img {
 h1 {
     align-items: center;
     text-align: center;
+    margin-bottom: 2rem;
 }
 
 
@@ -73,23 +78,32 @@ THESE UNLESS YOU WANT TO CHANGE THE APPEARANCE OF ALL PAGES */
 .page {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
+    width: 100%;
+    max-width: 1200px;
 }
 
 .left {
     width: 30%;
-    align-items: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transform: rotate(315deg);
 }
 
 .middle {
     width: 40%;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 .right {
     width: 30%;
-    align-items: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transform: rotate(45deg);
 }
 
@@ -97,12 +111,15 @@ THESE UNLESS YOU WANT TO CHANGE THE APPEARANCE OF ALL PAGES */
 .buttons {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .button {
     width: 100%;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
