--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
     
     background: radial-gradient(
         circle,
