--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,7 +95,6 @@ THESE UNLESS YOU WANT TO CHANGE THE APPEARANCE OF ALL PAGES */
 .middle {
     width: 40%;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -122,8 +121,8 @@ THESE UNLESS YOU WANT TO CHANGE THE APPEARANCE OF ALL PAGES */
 }
 
 .buttons p a {
-    display: block;
-    width: 100%;
+    display: inline-block;
+    width: 90%;
     padding: 1em;
     border: 1px solid;
     border-radius: 0.5em;
