--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     
     background: radial-gradient(
         circle,
