--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,6 +56,7 @@ header ul li a:hover {
 }
 img {
     width: 25%;
+    padding: 5em;
 }
 h1 {
     align-items: center;
@@ -73,7 +74,7 @@ DO NOT CHANGE UNLESS YOU WANT TO CHANGE THE APPEARANCE OF ALL PAGES */
     flex-grow: 1;
     width: 100%;
     max-width: 1200px;
-    border-image: 5em;
+    im
 }
 .left {
     width: 30%;
